--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <table cellspacing=20>
     <tr>
       <td>
-        <img src="images/sean-modified.png" alt="sean profile picture">
+        <img src="Images/sean-modified.png" alt="sean profile picture">
       </td>
       <td>
         <h1>Sean Holbert</h1>
