--- a/index.html
+++ b/index.html
@@ -31,14 +31,15 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="" src="images/full-stack.png" alt="full-stack-image" width="251" height="251">
+        <img class="icon-stack" src="images/full-stack.png" alt="full-stack-image">
         <h3>Full Stack Web Developer</h3>
-        <p>I can create beautiful and functional websites using HTML, CSS, Java, Bootstrap, Node, and SQL.  I love making websites!</p>
+        <p class="skill-description-stack">I can create beautiful and functional websites using HTML, CSS, Java, Bootstrap, Node, and SQL.  I love making websites!</p>
       </div>
       <div class="skill-row">
-        <img class="" src="images/networking.png" alt="networking-image" width="251" height="251">
+        <img class="icon-network" src="images/networking.png" alt="networking-image">
         <h3>Networking</h3>
-        <p>Networking is my jam!  I can create and maintain SOHO and enterprise networks using the latest technologies!</p>
+        <p class="skill-description-network">Networking is my jam!  I can create and maintain SOHO and enterprise networks and everything in between!  My professional
+        consultation services can find the right solution for you!</p>
       </div>
     </div>
     <hr>
