--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="profile">
       <img src="images/sean.png" alt="sean-photo">
       <h2>Hello.</h2>
-      <p>I'm an IT professional, specializing in Web programming and development and network solutions!</p>
+      <p class="intro">I'm an IT professional, specializing in Web programming and development and network solutions!</p>
     </div>
     <hr>
     <div class="skills">
@@ -33,12 +33,12 @@
       <div class="skill-row">
         <img class="icon-stack" src="images/full-stack.png" alt="full-stack-image">
         <h3>Full Stack Web Developer</h3>
-        <p class="skill-description-stack">I can create beautiful and functional websites using HTML, CSS, Java, Bootstrap, Node, and SQL.  I love making websites!</p>
+        <p class="">I can create beautiful and functional websites using HTML, CSS, Java, Bootstrap, Node, and SQL.  I love making websites!</p>
       </div>
       <div class="skill-row">
         <img class="icon-network" src="images/networking.png" alt="networking-image">
         <h3>Networking</h3>
-        <p class="skill-description-network">Networking is my jam!  I can create and maintain SOHO and enterprise networks and everything in between!  My professional
+        <p class="">Networking is my favorite!  I can create and maintain SOHO and enterprise networks and everything in between!  My professional
         consultation services can find the right solution for you!</p>
       </div>
     </div>
@@ -46,7 +46,7 @@
     <div class="contact-me">
       <h2>Get In Touch</h2>
       <h3>Are you an IT Professional, too?</h3>
-      <p>I'm always excited to meet and network with inspiring and current IT Pros!  Drop me a line!</p>
+      <p class="contact-message">I'm always excited to meet and network with inspiring and current IT Pros!  Drop me a line!</p>
       <a class="btn" href="mailto:sholbert6@icloud.com">CONTACT ME</a>
     </div>
   </div>
@@ -56,7 +56,7 @@
     <a class="footer-link" href="https://www.linkedin.com/in/sean-holbert-748a5312/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/the0bst3r">Twitter</a>
     <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-    <p>© 2021 Sean Holbert.</p>
+    <p class="copyright">© 2021 Sean Holbert.</p>
   </div>
 
 </body>
