--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="top-container">
     <img class="top-cloud" src="images/cloud.png" alt="cloud-image">
     <h1>I'm Sean.</h1>
-    <h2>a <span class="pro">pro</span>grammer.</h2>
+    <h2>an IT Professional.</h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-image">
     <img src="images/mountain.png" alt="mountain-image">
   </div>
@@ -25,7 +25,7 @@
     <div class="profile">
       <img src="images/sean.png" alt="sean-photo">
       <h2>Hello.</h2>
-      <p class="intro">I'm an IT professional, specializing in Web programming and development and network solutions!</p>
+      <p class="intro">I'm an IT professional, specializing in Web development and networking solutions!</p>
     </div>
     <hr>
     <div class="skills">
@@ -46,7 +46,7 @@
     <div class="contact-me">
       <h2>Get In Touch</h2>
       <h3>Are you an IT Professional, too?</h3>
-      <p class="contact-message">I'm always excited to meet and network with inspiring and current IT Pros!  Drop me a line!</p>
+      <p class="contact-message">I'm always excited to meet and network with inspiring and current IT Pros!  Use the contact information below to connect!</p>
       <a class="btn" href="mailto:sholbert6@icloud.com">CONTACT ME</a>
     </div>
   </div>
@@ -55,7 +55,7 @@
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/in/sean-holbert-748a5312/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/the0bst3r">Twitter</a>
-    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <a class="footer-link" href="https://obsean78.github.io/My-Site/">Website</a>
     <p class="copyright">© 2021 Sean Holbert.</p>
   </div>
 
